--- a/backend/environment.yml
+++ b/backend/environment.yml
@@ -5,51 +5,85 @@ channels:
   - https://repo.anaconda.com/pkgs/r
   - conda-forge
 dependencies:
+  - _python_abi3_support=1.0
   - annotated-doc=0.0.4
   - annotated-types=0.6.0
   - anyio=4.10.0
+  - appnope=0.1.4
+  - asttokens=3.0.1
   - blas=1.0
   - bzip2=1.0.8
   - ca-certificates=2025.12.2
   - click=8.2.1
+  - comm=0.2.3
+  - cpython=3.12.12
+  - debugpy=1.8.19
+  - decorator=5.2.1
+  - executing=2.2.1
   - expat=2.7.3
   - faiss=1.9.0
   - faiss-cpu=1.9.0
   - fastapi=0.121.1
   - h11=0.16.0
   - idna=3.11
+  - ipykernel=7.1.0
+  - ipython=9.8.0
+  - ipython_pygments_lexers=1.1.1
+  - jedi=0.19.2
+  - jupyter_client=8.7.0
+  - jupyter_core=5.9.1
+  - krb5=1.21.3
   - libcxx=20.1.8
+  - libedit=3.1.20250104
   - libexpat=2.7.3
   - libfaiss=1.9.0
   - libffi=3.4.4
   - libgfortran5=15.2.0
   - libopenblas=0.3.30
+  - libsodium=1.0.20
   - libsqlite=3.51.1
   - libzlib=1.3.1
   - llvm-openmp=20.1.8
+  - matplotlib-inline=0.2.1
   - ncurses=6.5
   - numpy-base=1.26.4
   - openssl=3.6.0
   - packaging=25.0
+  - parso=0.8.5
+  - pexpect=4.9.0
   - pip=25.3
+  - platformdirs=4.5.1
+  - prompt-toolkit=3.0.52
+  - psutil=7.2.0
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
   - pydantic=2.12.4
   - pydantic-core=2.41.5
   - python=3.12.8
-  - python-dotenv=1.2.1
+  - python-dateutil=2.9.0.post0
+  - python-gil=3.12.12
   - python_abi=3.12
+  - pyzmq=27.1.0
   - readline=8.3
   - setuptools=80.9.0
+  - six=1.17.0
   - sniffio=1.3.1
   - sqlite=3.51.0
+  - stack_data=0.6.3
   - starlette=0.47.3
   - tk=8.6.15
+  - tornado=6.5.4
+  - traitlets=5.14.3
   - typing-extensions=4.15.0
   - typing-inspection=0.4.2
   - typing_extensions=4.15.0
   - tzdata=2025b
   - uvicorn=0.35.0
+  - wcwidth=0.2.14
+  - websockets=15.0.1
   - wheel=0.45.1
   - xz=5.6.4
+  - zeromq=4.3.5
   - zlib=1.3.1
   - pip:
       - adalflow==1.1.3
