add multi-language generation support

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -44,6 +44,13 @@ TEXT_CHUNK_SIZE=[chunk size, recommended: 1000]
 TEXT_CHUNK_OVERLAP=[overlap size, recommended: 50]
 
 # ============================================================
+# Localization
+# ============================================================
+# Default language for wiki generation
+# Supported: en (English), ja (Japanese), zh (Chinese), es (Spanish), kr (Korean), vi (Vietnamese), etc.
+DEFAULT_LANGUAGE=[language code, default: en]
+
+# ============================================================
 # RAG (Retrieval Augmented Generation) Configuration
 # ============================================================
 # Maximum characters for RAG context (prevents LLM overflow)
